<package>
  <name>srdfdom_advr</name>
  <version>0.2.6</version>
  <description>Parser for Semantic Robot Description Format (SRDF).</description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/srdf</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rosconsole_bridge</run_depend>

</package>
